--- a/package.json
+++ b/package.json
@@ -3,19 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-scripts": "1.0.13",
     "immutability-helper": "^2.1.1",
     "jquery": "^3.1.1",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
+    "qrcodejs": "^1.0.0",
+    "react": "^15.6.1",
     "react-date-range": "^0.9.2",
+    "react-dom": "^15.6.1",
     "react-draggable": "^2.2.3",
     "react-image-fallback": "^4.0.1",
     "react-infinite-scroller": "^1.0.7",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.0.0",
+    "react-scripts": "1.0.13",
     "react-select": "^1.0.0-rc.2",
     "react-toolbox": "^1.3.4",
     "redux": "^3.7.2",
