--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "immutability-helper": "^2.1.1",
     "jquery": "^3.1.1",
+    "jwt-decode": "^2.2.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "qrcodejs": "^1.0.0",
