--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,25 @@
 {
-    "name": "",
+    "short_name": "Polymer",
+    "name": "Polymer",
     "icons": [
         {
-            "src": "/android-chrome-192x192.png?v=WGL6pdlJK2",
+            "src": "/favicons/android-chrome-192x192.png?v=eE5e6B5NQ7",
             "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "/android-chrome-512x512.png?v=WGL6pdlJK2",
+            "src": "/favicons/android-chrome-512x512.png?v=eE5e6B5NQ7",
             "sizes": "512x512",
+            "type": "image/png"
+        },
+        {
+            "src": "/favicons/favicon.ico",
+            "sizes": "192x192",
             "type": "image/png"
         }
     ],
+    "start_url": "/index.html",
+    "display": "standalone",
     "theme_color": "#ffffff",
-    "background_color": "#ffffff",
-    "display": "standalone"
+    "background_color": "#ffffff"
 }
