--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "qrcodejs": "^1.0.0",
     "react": "^15.6.1",
     "react-date-range": "^0.9.2",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.6.1",
     "react-draggable": "^2.2.3",
     "react-image-fallback": "^4.0.1",
