--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
+    "normalize.css": "^7.0.0",
     "qrcodejs": "^1.0.0",
     "react": "^15.6.1",
     "react-date-range": "^0.9.2",
