--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dnd-html5-backend": "^2.5.4",
     "react-dom": "^15.6.1",
     "react-draggable": "^2.2.3",
+    "react-emojione": "^5.0.0",
     "react-image-fallback": "^4.0.1",
     "react-infinite-scroller": "^1.0.7",
     "react-redux": "^5.0.6",
