--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
+    "node-sass-chokidar": "0.0.3",
+    "npm-run-all": "^4.1.2",
     "qrcodejs": "^1.0.0",
     "react": "^15.6.1",
     "react-date-range": "^0.9.2",
@@ -30,8 +32,12 @@
     "svg-intersections": "^0.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "npm-run-all -p watch-css start-js",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   }
