--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "immutability-helper": "^2.1.1",
     "jquery": "^3.1.1",
     "jwt-decode": "^2.2.0",
+    "mathjs": "^3.20.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
     "node-sass-chokidar": "0.0.3",
