--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^4.0.0",
     "react-scripts": "1.0.13",
     "react-select": "^1.0.0-rc.2",
+    "react-spinkit": "^3.0.0",
     "react-toolbox": "^1.3.4",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
