--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "qrcodejs": "^1.0.0",
+    "raven-for-redux": "^1.3.0",
+    "raven-js": "^3.24.0",
     "react": "^15.6.1",
     "react-date-range": "^0.9.2",
     "react-dnd": "^2.5.4",
