--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-select": "^1.0.0-rc.2",
     "react-spinkit": "^3.0.0",
     "react-toolbox": "^1.3.4",
+    "react-transition-group": "^1.2.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "superagent": "^3.6.0",
