--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "d3": "^4.11.0",
     "immutability-helper": "^2.1.1",
     "jquery": "^3.1.1",
+    "js-file-download": "^0.4.1",
     "jwt-decode": "^2.2.0",
     "mathjs": "^3.20.0",
     "moment": "^2.17.1",
