--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-standard": "^3.0.1"
-  }, 
+    "eslint-plugin-standard": "^3.0.1",
+    "node-less-chokidar": "^0.1.2"
+  },
   "theme": {
     "primary-color": "#ff0000"
   }
