--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mathjs": "^3.20.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
+    "node-sass-chokidar": "^1.2.2",
     "npm-run-all": "^4.1.2",
     "qrcodejs": "^1.0.0",
     "raven-for-redux": "^1.3.0",
