--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "mathjs": "^3.20.0",
     "moment": "^2.17.1",
     "moment-timezone": "^0.5.11",
-    "node-sass-chokidar": "0.0.3",
     "npm-run-all": "^4.1.2",
     "qrcodejs": "^1.0.0",
     "raven-for-redux": "^1.3.0",
@@ -57,7 +56,8 @@
     "eslint-plugin-node": "^5.2.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
-    "node-less-chokidar": "^0.1.2"
+    "node-less-chokidar": "^0.1.2",
+    "node-sass-chokidar": "0.0.3"
   },
   "theme": {
     "primary-color": "#ff0000"
