--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.4.1",
     "babel-polyfill": "^6.26.0",
     "d3": "^4.11.0",
     "immutability-helper": "^2.1.1",
